--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#" class="btn">Shop Now <i class="bx bx-right-arrow-alt"></i> </a>
         </div>
         <div class="home-img">
-                <img src="img/Promote.png" alt="">
+                <img src="./img/Promote.png" alt="">
         </div>
     </section>
 
