--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAMOON Shop Website</title>
+    <link rel="shortcut icon" type="x-icon" href="Img/LAMOON Logo_1.png">
     <!--link to CSS-->
     <link rel="stylesheet" href="style.css">
     <!---box icon-->
